// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileShares > collaborators list > renders sharedWithLabel and sharee list 1`] = `
"<div data-v-5d17c3fa="" id="oc-files-sharing-sidebar" class="relative">
  <invite-collaborator-form-stub data-v-5d17c3fa="" resource="undefined" savebuttonlabel="Share" label="Share with people" invitelabel="" contextualhelper="[object Object]" class="mt-2"></invite-collaborator-form-stub>
  <div data-v-5d17c3fa="" id="files-collaborators-headline" class="flex items-center justify-between">
    <h4 data-v-5d17c3fa="" class="font-semibold my-0">Shared with</h4>
  </div>
  <custom-component-target-stub data-v-5d17c3fa="" extensionpoint="[object Object]"></custom-component-target-stub>
  <ul data-v-5d17c3fa="" id="files-collaborators-list" class="oc-list m-0" aria-label="Share receivers">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <custom-component-target-stub data-v-5d17c3fa="" extensionpoint="[object Object]"></custom-component-target-stub>
  </ul>
  <div data-v-5d17c3fa="" class="flex justify-center"><button data-v-5d17c3fa="" type="button" class="oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 justify-center text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default toggle-shares-list-btn">
      <!--v-if-->
      <!-- @slot Content of the button --> Show less
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`FileShares > current space > loads space members if a space is given and the current user is member 1`] = `
"<div data-v-5d17c3fa="" id="oc-files-sharing-sidebar" class="relative">
  <invite-collaborator-form-stub data-v-5d17c3fa="" resource="undefined" savebuttonlabel="Share" label="Share with people" invitelabel="" contextualhelper="[object Object]" class="mt-2"></invite-collaborator-form-stub>
  <div data-v-5d17c3fa="" id="files-collaborators-headline" class="flex items-center justify-between">
    <h4 data-v-5d17c3fa="" class="font-semibold my-0">Shared with</h4>
  </div>
  <custom-component-target-stub data-v-5d17c3fa="" extensionpoint="[object Object]"></custom-component-target-stub>
  <ul data-v-5d17c3fa="" id="files-collaborators-list" class="oc-list mb-4" aria-label="Share receivers">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <custom-component-target-stub data-v-5d17c3fa="" extensionpoint="[object Object]"></custom-component-target-stub>
  </ul>
  <!--v-if-->
  <div data-v-5d17c3fa="" class="flex items-center justify-between mt-2">
    <h4 data-v-5d17c3fa="" class="font-semibold my-2">Space members</h4>
  </div>
  <ul data-v-5d17c3fa="" id="space-collaborators-list" class="oc-list oc-list-divider overflow-hidden m-0" aria-label="Space members">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
  </ul>
  <!--v-if-->
</div>"
`;
